--- a/bower.json
+++ b/bower.json
@@ -21,9 +21,9 @@
     "zepto": "^1.2.0"
   },
   "devDependencies": {
-    "zepto": "^1.2.0",
     "base64": "^1.0.1",
     "jsonp": "^0.0.1",
-    "bootstrap": "^3.3.7"
+    "bootstrap": "^3.3.7",
+    "jquery": "^3.2.1"
   }
 }
