--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "jsonp": "^0.0.1",
     "bootstrap": "^3.3.7",
-    "jquery": "^3.2.1"
+    "jquery": "^3.2.1",
+    "bootswatch": "^3.3.7"
   }
 }
