--- a/bower.json
+++ b/bower.json
@@ -24,6 +24,7 @@
     "jsonp": "^0.0.1",
     "bootstrap": "^3.3.7",
     "jquery": "^3.2.1",
-    "bootswatch": "^3.3.7"
+    "bootswatch": "^3.3.7",
+    "base64": "^1.0.1"
   }
 }
